--- a/cartoon.html
+++ b/cartoon.html
@@ -667,36 +667,21 @@ footer p {
       </div>
 
       <div class="info">
-        <h2>Habilidades</h2>
-        <ul>
-          <li>Espadachín experto - Maestro del estilo "Tempestad"</li>
-          <li>Control del rayo - Puede convocar tormentas eléctricas</li>
-          <li>Resistencia sobrehumana - Aguanta condiciones extremas</li>
-          <li>Liderazgo carismático - Inspira a sus tropas en batalla</li>
-          <li>Estratega militar - Ganó 12 batallas sin perder una</li>
-        </ul>
         
         <div class="estadisticas">
           <div class="estadistica">
-            <span class="valor">98%</span>
+            <span class="valor">0%</span>
             <span class="etiqueta">Fuerza</span>
           </div>
           <div class="estadistica">
-            <span class="valor">95%</span>
-            <span class="etiqueta">Habilidad</span>
+            <span class="valor">0%</span>
+            <span class="etiqueta">Velocidad</span>
           </div>
           <div class="estadistica">
-            <span class="valor">90%</span>
-            <span class="etiqueta">Magia</span>
+            <span class="valor">0%</span>
+            <span class="etiqueta">Resistencia</span>
           </div>
         </div>
-      </div>
-
-      <div class="info">
-        <h2>Equipamiento</h2>
-        <p><strong>Espada:</strong> Tormenta Celestial - Una espada forjada con metal de meteorito que canaliza rayos.</p>
-        <p><strong>Armadura:</strong> Placas de Trueno - Armadura de placas azul acero con runas de protección.</p>
-        <p><strong>Reliquia:</strong> Amuleto del Trono - Le permite controlar el clima en su entorno inmediato.</p>
       </div>
     </div>
   </div>
@@ -708,4 +693,5 @@ footer p {
   <p>© 2026 Imperiales Wiki - Cartoon</p>
 </footer>
 </body>
+
 </html>
